<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!-- Reading-settings background (plan A2); its own view so a photo can be blurred without blurring the keys -->
<ImageView
    android:id="@+id/mainBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:importantForAccessibility="no"
    android:scaleType="centerCrop" />

<LinearLayout
    android:id="@+id/viewMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        style="@style/MediumFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="2"
        android:id="@+id/tv_hint"
        android:text="@string/hint_hymn_ui"
        android:textColor="@color/red800"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:hint="@string/hint_hymn_number_enter"
        android:maxLength="4"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/historyListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/tv_border_bg_primary"
        android:visibility="gone" />

    <EditText
        android:id="@+id/tv_search"
        style="@style/XLargeFont"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:hint="@string/hint_hymn_content_search"
        android:inputType="text"
        android:maxLines="1"
        tools:ignore="Autofill" />

    <RelativeLayout
        android:id="@+id/actionArea"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5">

        <Button
            android:id="@+id/btn_search"
            style="@style/ButtonMain"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@id/dummy"
            android:text="@string/hymn_search" />

        <TextView
            android:id="@+id/dummy"
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true" />

        <Spinner
            android:id="@+id/spinner_toc"
            style="@style/ButtonMain"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@id/btn_search"
            android:layout_toEndOf="@id/dummy" />

        <Button
            android:id="@+id/btn_update"
            style="@style/ButtonMain"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@id/dummy"
            android:text="@string/app_upgrade" />

        <Button
            android:id="@+id/btn_english"
            style="@style/ButtonMain"
            android:layout_toEndOf="@id/dummy"
            android:layout_alignParentBottom="true"
            android:text="@string/hymn_english" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/keypadArea"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7.5"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="start"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <Button
                android:id="@+id/n7"
                style="@style/ButtonKB"
                android:text="@string/nn7" />

            <Button
                android:id="@+id/n4"
                style="@style/ButtonKB"
                android:text="@string/nn4" />

            <Button
                android:id="@+id/n1"
                style="@style/ButtonKB"
                android:text="@string/nn1" />

            <Button
                android:id="@+id/n10"
                style="@style/ButtonKB"
                android:text="@string/nn10"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/n8"
                style="@style/ButtonKB"
                android:text="@string/nn8" />

            <Button
                android:id="@+id/n5"
                style="@style/ButtonKB"
                android:text="@string/nn5" />

            <Button
                android:id="@+id/n2"
                style="@style/ButtonKB"
                android:text="@string/nn2" />

            <Button
                android:id="@+id/n0"
                style="@style/ButtonKB"
                android:text="@string/nn0" />

        </LinearLayout>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/n9"
                style="@style/ButtonKB"
                android:text="@string/nn9" />

            <Button
                android:id="@+id/n6"
                style="@style/ButtonKB"
                android:text="@string/nn6" />

            <Button
                android:id="@+id/n3"
                style="@style/ButtonKB"
                android:text="@string/nn3" />

            <Button
                android:id="@+id/n11"
                style="@style/ButtonKB"
                android:text="@string/nn11"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/bs_er"
                style="@style/ButtonKB"
                android:text="@string/hymn_er"
                android:textSize="25sp" />

            <Button
                android:id="@+id/bs_xb"
                style="@style/ButtonKB"
                android:text="@string/hymn_xb"
                android:textSize="25sp" />

            <Button
                android:id="@+id/bs_xg"
                style="@style/ButtonKB"
                android:text="@string/hymn_xg"
                android:textSize="25sp" />

            <Button
                android:id="@+id/bs_yb"
                style="@style/ButtonKB"
                android:text="@string/hymn_yb"
                android:textSize="25sp" />

            <Button
                android:id="@+id/bs_bb"
                style="@style/ButtonKB"
                android:text="@string/hymn_bb"
                android:textSize="25sp" />

            <Button
                android:id="@+id/bs_db"
                style="@style/ButtonKB"
                android:text="@string/hymn_db"
                android:textSize="25sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</FrameLayout>