...
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_preview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="end"
                android:maxLines="2"
                android:textAppearance="@style/TextAppearance.Hymnal.Title" />
...
